--- a/style/index.css
+++ b/style/index.css
@@ -384,10 +384,12 @@ span {
 /* Popular food */
 .popu-food {
   width: 100%;
-  height: 65vh;
+  height: 70vh;
   margin-top: 5%;
+  background-color: yellow;
 }
 .popu-food .popu-txt {
+  background-color: #eb5b00;
   width: 100%;
   height: 20%;
   display: flex;
@@ -421,11 +423,20 @@ span {
 .popu-food .food-box {
   width: 100%;
   height: 26%;
-  margin-top: 10px;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 5%;
-  padding: 10px 0px;
+  background-color: blue;
+}
+.food-box .f-box-1 {
+  display: flex;
+  gap: 3rem;
+}
+.des-popu-food {
+  background-color: greenyellow;
+  width: 100%;
+  height: 54%;
 }
 .food-box .img-box {
   width: 100px;
@@ -530,7 +541,6 @@ span {
   width: 100%;
   height: 50vh;
   margin-top: 5%;
-  background-color: aqua;
 }
 .chef-txt {
   width: 100%;
@@ -562,17 +572,34 @@ span {
 .chef-member {
   width: 100%;
   height: 80%;
-  background-color: red;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 .chef-member .chef-box {
+  height: 35vh;
   width: 20%;
-  height: 20%;
-  background-color: yellow;
-  /* flex-grow: 1; */
-  flex-basis: 200px;
+  padding: 10px 25px;
+}
+.chef-box img {
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  clip-path: circle();
+  background-color: #343e55;
+  transition: all 0.5s ease-in-out;
+  /* object-position: 50% 0%; */
+}
+.chef-box img:hover {
+  scale: 1.1;
+}
+.chef-box h2 {
+  font-family: Arial;
+  font-size: 1.5rem;
+  color: var(--nav-responsive);
+  font-weight: 700;
+  text-align: center;
+  padding: 15px 0px;
 }
 footer {
   background-color: var(--sec-color);
@@ -666,7 +693,7 @@ footer {
   /* Service Box */
   .service-box {
     flex-direction: column;
-    height: 140vh;
+    height: auto;
     padding: 20px;
     gap: 20px;
   }
@@ -688,28 +715,22 @@ footer {
     font-size: 1.8rem;
   }
   .about {
-    /* display: none; */
-    /* background-color: gray; */
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
+    background-color: red;
   }
   .about .ab-img {
     width: 100%;
     height: 50%;
-    /* background-color: #eb5b00; */
     display: grid;
     place-items: center;
   }
   .about .ab-describe {
+    /* background-color: yellow; */
     width: 100%;
     height: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 100px;
-    padding-left: 30px;
   }
   .ab-describe > h2 {
     color: var(--main-color);
@@ -776,6 +797,56 @@ footer {
     border: none;
     width: 10rem;
     padding: 10px 0px;
+  }
+  /* Popular Food section */
+  .popu-food {
+    background-color: violet;
+    width: 100%;
+    height: auto;
+  }
+  .popu-txt {
+    background-color: rebeccapurple;
+    width: 100%;
+    height: 10%;
+  }
+  .food-box {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+  }
+  .f-box-1 {
+    background-color: yellow;
+    justify-content: space-between;
+  }
+  .des-popu-food {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .des-popu-txt {
+    width: 100%;
+  }
+  .des-popu-txt p {
+    width: 100%;
+    padding: 20px 30px;
+  }
+  .des-popu-img {
+    width: 100%;
+    height: 50%;
+  }
+  .why {
+    background-color: #f5f7f8;
+    width: 100%;
+    height: 50%;
+    display: none;
+  }
+  .Chef {
+    background-color: #eb5b00;
+    width: 100%;
+    height: 50%;
+    margin-top: 100%;
   }
 }
 
