--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   list-style: none !important;
   text-decoration: none;
+  /* outline: 2px solid gold; */
 }
 html {
   scroll-behavior: smooth;
